--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':Common'
+include ':christina.library.common'
 
-project(':Common').projectDir = new File('common')
+project(':christina.library.common').projectDir = new File('christina.library.common')
