--- a/christina.library.common/build.gradle
+++ b/christina.library.common/build.gradle
@@ -21,10 +21,12 @@ android {
 }
 
 dependencies {
-    api "org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.60"
-    api "org.jetbrains.kotlin:kotlin-reflect:1.1.60"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jre7:1.2.0"
+    api "org.jetbrains.kotlin:kotlin-reflect:1.2.0"
 
-    api 'com.android.support:support-annotations:27.0.1'
+    api 'com.android.support:support-annotations:27.0.2'
+
+    api "io.reactivex.rxjava2:rxjava:2.1.6"
 
     api "org.jetbrains.anko:anko-commons:0.10.2"
 
